fix: section too wide

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -455,7 +455,7 @@ header #download-btn
 
 #about .container
   padding 0
-  width 1145px
+  max-width 1145px
 
 .our-process > div
   padding 0 11px
